# DES-Arduino

./: README.md
PoC/: CMakeLists.txt  README.md  platformio.ini
PoC/libraries/: mcp2515
PoC/resources/: 50-arduino.rules
PoC/src/: CMakeLists.txt  main.cc
docs/: index.md
